--- a/package.json
+++ b/package.json
@@ -112,8 +112,8 @@
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^24.0.6",
     "@types/node": "^10.17.5",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react": "~18.2.0",
+    "@types/react-dom": "~18.2.0",
     "@types/react-is": "^16.7.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/tabbable": "^3.1.0",
